# rag-system

./: Dockerfile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
src/: .env.example  __init__.py  agent.py  config.py  logging_setup.py  main.py
src/benchmark/: bench_ragas.py  samples.py  utils.py
src/generation/: __init__.py  base.py  ollama_llm.py  openai_llm.py
src/ingestion/: embedder.py  loaders.py
tests/: conftest.py  test_agent.py  test_embedder.py  test_generation.py  test_loaders.py
