[project]
name = "kernel-rag"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "docling>=2.83.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.8.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.13.1",
    "httpx>=0.27.0",
    "structlog>=25.5.0",
    "rich>=13.0.0",
    "sentence-transformers>=5.3.0",
    "langchain-huggingface>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ragas>=0.4.3",
    "scikit-learn>=1.3.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
